--- a/pom.xml
+++ b/pom.xml
@@ -18,12 +18,6 @@
 
 
     <dependencies>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
-        </dependency>
-
 <!--logback-->
         <dependency>
             <groupId>ch.qos.logback</groupId>
@@ -134,6 +128,16 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.10.1</version>
+        </dependency>
     </dependencies>
 
     <build>
